overflow hidden hides facebook like dialog. Fix for the oveflowing FB like still needed for mobile views

--- a/hexagonit/themeskel/templates/less_theme/+namespace_package+/+package+/theme_resources/default/css/style.css
+++ b/hexagonit/themeskel/templates/less_theme/+namespace_package+/+package+/theme_resources/default/css/style.css
@@ -3488,10 +3488,6 @@ a.historyComparePrevious span {
 #content #usersearchform input.searchButton {
   box-sizing: content-box;
 }
-#content .social-buttons {
-  overflow-x: hidden;
-  overflow-y: visible;
-}
 #content .social-buttons ul {
   list-style-type: none;
   margin-left: 0;
