--- a/hexagonit/themeskel/templates/less_theme/+namespace_package+/+package+/theme_resources/default/less/theme/pagemodel.less
+++ b/hexagonit/themeskel/templates/less_theme/+namespace_package+/+package+/theme_resources/default/less/theme/pagemodel.less
@@ -232,9 +232,6 @@
     }
 
     .social-buttons {
-        overflow-x: hidden;
-        overflow-y: visible;
-
         ul {
             list-style-type: none;
             margin-left: 0;
